# C8

./: .gitignore  CMakeLists.txt
src/: 8_1_inline.cpp  8_2_firstref.cpp  8_3_sceref.cpp  8_4_swaps.cpp  8_5_cubes.cpp  8_6_strtref.cpp  8_7_strquote.cpp  8_8_filefunc.cpp
